--- a/index.html
+++ b/index.html
@@ -2,43 +2,77 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/styles.css" />
-  <title>Seth Hinton Photography</title>
-  <script src="https://kit.fontawesome.com/e00c05694b.js"></script>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/styles.css" />
+	<title>9th East Official</title>
+	<script src="https://kit.fontawesome.com/e00c05694b.js"></script>
+	<link rel="icon" href="images/nine.jpg">
 </head>
 
+<!-- In the future, I will instead have these pages: 'merch', 'about', 'upcoming' -->
+
 <body class="lead">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <i class="fas fa-camera-retro text-white mr-3"></i>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link text-white active" href="./index.html">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="pages/about.html">About</a>
-            <a class="nav-item nav-link" href="pages/portfolio.html">Portfolio</a>
-            <a class="nav-item nav-link" href="pages/reviews.html">Reviews</a>
-          </div>
-        </div>
-      </nav>
-      <div class="text-center">
-        <p class="display-4">Seth Hinton</p>
-        <hr class="bg-dark w-25">
-        <p>photos of a lifetime</p>
-      </div>
-      <img src="images/_DSC1491.jpg" alt=""  class="img-fluid">
-  <!-- <a href='https://photos.google.com/share/AF1QipNRsNuyJCWuuG0Bt31HkT5JWetpvBYmod9BIOADE9_9dA1f3u5j4uo55zYdg-TYUQ?key=cEhSMXp5bFJaVC0zQzNJWVFmRTdNTzNnMm44WVdn&source=ctrlq.org'><img src='https://lh3.googleusercontent.com/lvPi4-ldF_YDMxp1Bl6PfzbaVYUpnEkILIbUVzLgNM4CHNSZca64SFT5eE6h1r09gPqbcbZkBKG2SJWHmcKEe9l21-tNRiUbodXnJEw46ldKam_LSJCZLYyrkB4loTzmwSMPnGQbZg=w2400' class="img-fluid " /></a> -->
-<!-- Footer -->
-<footer class="page-footer font-small bg-footer fixed-bottom">
-    <div class="text-center py-2">
-      <a href="https://github.com/BYUCS260/lab1-html-css-goodbreathseth"> Github repo</a>
-    </div>
-  </footer>
-<!-- Footer -->
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+		<!-- <i class="fas fa-camera-retro text-white mr-3"></i> -->
+		<img src="images/white logo.png" alt="Logo" style="width: 90px" class="mx-2">
+
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+			aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+			<div class="navbar-nav">
+				<a class="nav-item nav-link text-white active font-weight-bold" href="./index.html">home</a>
+				<a class="nav-item nav-link" href="pages/merch.html">merch</a>
+				<a class="nav-item nav-link" href="pages/photos.html">photos</a>
+				<a class="nav-item nav-link" href="pages/contact.html">contact</a>
+			</div>
+		</div>
+	</nav>
+	<!-- <div class="text-center">
+		<p class="display-4">9th East</p>
+		<hr class="bg-dark w-25">
+		<p>You Don't Think (EP)</p>
+	</div> -->
+
+	<div class="text-center">
+
+		<div class="row w-75 mt-5 pt-5" style="margin:0 auto">
+			<div class="col-sm">
+				<img src="images/YouDon'tThink EP COVER_082819 (1).jpg" alt="album" class="w-100 shadow">
+			</div>
+			<div class="col-sm">
+				<img src="images/black logo - transparent background.jpg" alt="9th east" class="w-50 mt-3">
+				<h4 class="mt-3">You Don't Think - EP</h4>
+				<div class="mt-5">
+					<p>Listen Now</p>
+					<i class="fab fa-spotify m-1"></i>
+					<i class="fab fa-apple m-1"></i>
+					<i class="fab fa-youtube m-1"></i>
+					<i class="fab fa-amazon m-1"></i>	
+					<i class="fab fa-google-play m-1"></i>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- <a href='https://photos.google.com/share/AF1QipNRsNuyJCWuuG0Bt31HkT5JWetpvBYmod9BIOADE9_9dA1f3u5j4uo55zYdg-TYUQ?key=cEhSMXp5bFJaVC0zQzNJWVFmRTdNTzNnMm44WVdn&source=ctrlq.org'><img src='https://lh3.googleusercontent.com/lvPi4-ldF_YDMxp1Bl6PfzbaVYUpnEkILIbUVzLgNM4CHNSZca64SFT5eE6h1r09gPqbcbZkBKG2SJWHmcKEe9l21-tNRiUbodXnJEw46ldKam_LSJCZLYyrkB4loTzmwSMPnGQbZg=w2400' class="img-fluid " /></a> -->
+	<!-- Footer -->
+	<footer class="page-footer font-small bg-footer fixed-bottom">
+		<div class="text-center py-2">
+			<a href="https://github.com/BYUCS260/lab1-html-css-goodbreathseth"> Github repo</a>
+		</div>
+	</footer>
+	<!-- Footer -->
 </body>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+	integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+	crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+	integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+	crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+	integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+	crossorigin="anonymous"></script>
+
 </html>
