--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- In the future, I will instead have these pages: 'merch', 'about', 'upcoming' -->
 
 <body class="lead">
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<!-- <i class="fas fa-camera-retro text-white mr-3"></i> -->
 		<img src="images/white logo.png" alt="Logo" style="width: 90px" class="mx-2">
 
@@ -25,8 +25,9 @@
 			<div class="navbar-nav">
 				<a class="nav-item nav-link text-white active font-weight-bold" href="./index.html">home</a>
 				<a class="nav-item nav-link" href="pages/merch.html">merch</a>
-				<a class="nav-item nav-link" href="pages/photos.html">photos</a>
+				<a class="nav-item nav-link" href="pages/photos.html">media feed</a>
 				<a class="nav-item nav-link" href="pages/contact.html">contact</a>
+				<i id="changeColor" class="fas fa-exchange-alt nav-item nav-link mt-1 ml-1 float-right"></i>
 			</div>
 		</div>
 	</nav>
@@ -47,12 +48,24 @@
 				<h4 class="mt-3">You Don't Think - EP</h4>
 				<div class="mt-5">
 					<p>Listen Now</p>
-					<i class="fab fa-spotify m-1"></i>
-					<i class="fab fa-apple m-1"></i>
-					<i class="fab fa-youtube m-1"></i>
-					<i class="fab fa-amazon m-1"></i>	
-					<i class="fab fa-google-play m-1"></i>
+					<a href="https://open.spotify.com/artist/4hCz1Zq0X4HOK5Uemg5JKG" style="text-decoration: none" class="text-dark">
+						<i class="fab fa-spotify m-1"></i>
+					</a>
+					<a href="https://itunes.apple.com/us/artist/9th-east/1443970351" style="text-decoration: none" class="text-dark">
+						<i class="fab fa-apple m-1"></i>
+					</a>
+					<a href="https://www.youtube.com/channel/UCrXU4iQNEsauVd2cVhOGF2g" style="text-decoration: none" class="text-dark">
+						<i class="fab fa-youtube m-1"></i>
+					</a>
+					<a href="https://music.amazon.com/artists/B07KQL787Q?ref=dm_sh_dad8-9121-dmcp-ceda-2098e&musicTerritory=US&marketplaceId=ATVPDKIKX0DER" style="text-decoration: none" class="text-dark">
+						<i class="fab fa-amazon m-1"></i>	
+					</a>
+					<a href="https://play.google.com/store/music/artist?id=Ahaikpvfqye6dihbp67resny3t4&hl=en_US" style="text-decoration: none" class="text-dark">
+						<i class="fab fa-google-play m-1"></i>
+					</a>
 				</div>
+					<!-- BELOW IS AN EMBEDDED AMAZON MUSIC PLAYER TO LISTEN TO CLIPS OF OUR SONGS  -->
+					<!-- <iframe id='AmazonMusicEmbedB07KQL787Q' src='https://music.amazon.com/embed/B07KQL787Q/?id=G8hQ6C7qgn&marketplaceId=ATVPDKIKX0DER&musicTerritory=US' width='100%' height='550px' style='border:1px solid rgba(0, 0, 0, 0.12);max-width: width 100px;'></iframe> -->
 			</div>
 		</div>
 	</div>
@@ -74,5 +87,5 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
 	integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
 	crossorigin="anonymous"></script>
-
+<script src="script.js"></script>
 </html>
