--- a/pages/merch.html
+++ b/pages/merch.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="lead">
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<!-- <i class="fas fa-camera-retro text-white mr-3"></i> -->
 		<img src="../images/white logo.png" alt="Logo" style="width: 90px" class="mx-2">
 
@@ -23,8 +23,9 @@
 			<div class="navbar-nav">
 				<a class="nav-item nav-link" href="../index.html">home</a>
 				<a class="nav-item nav-link text-white font-weight-bold" href="./merch.html">merch</a>
-				<a class="nav-item nav-link" href="./photos.html">photos</a>
+				<a class="nav-item nav-link" href="./photos.html">media feed</a>
 				<a class="nav-item nav-link" href="./contact.html">contact</a>
+				<i id="changeColor" class="fas fa-exchange-alt nav-item nav-link mt-1 ml-1 float-right"></i>
 			</div>
 		</div>
 	</nav>
@@ -60,6 +61,7 @@
 		</div>
 	</footer>
 	<!-- Footer -->
+	<script src="../script.js"></script>
 </body>
 
 </html>
