--- a/pages/photos.html
+++ b/pages/photos.html
@@ -12,7 +12,7 @@
 
 <body class="lead">
   <!-- Header -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
     <!-- <i class="fas fa-camera-retro text-white mr-3"></i> -->
     <img src="../images/white logo.png" alt="Logo" style="width: 90px" class="mx-2">
 
@@ -24,14 +24,15 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="../index.html">home</a>
         <a class="nav-item nav-link" href="./merch.html">merch</a>
-        <a class="nav-item nav-link text-white font-weight-bold" href="./photos.html">photos</a>
+        <a class="nav-item nav-link text-white font-weight-bold" href="./photos.html">media feed</a>
         <a class="nav-item nav-link" href="./contact.html">contact</a>
+        <i id="changeColor" class="fas fa-exchange-alt nav-item nav-link mt-1 ml-1 float-right"></i>
       </div>
     </div>
   </nav>
 
   <!-- Flexbox of pictures -->
-  <div class="container mt-4">
+  <!-- <div class="container mt-4">
     <div class="row">
       <div class="col">
         <img src="../images/IMG_1060.jpg" alt="Photo of band" class="w-75">
@@ -68,7 +69,13 @@
       </div>
 
     </div>
-  </div>
+  </div> -->
+
+  <script src="https://assets.juicer.io/embed.js" type="text/javascript"></script>
+  <link href="https://assets.juicer.io/embed.css" media="all" rel="stylesheet" type="text/css" />
+  <ul class="juicer-feed" data-feed-id="9theastmusic">
+    <h1 class="referral"><a href="https://www.juicer.io">Powered by Juicer.io</a></h1>
+  </ul>
 
   <!-- Footer -->
   <footer class="page-footer font-small bg-footer fixed-bottom">
@@ -77,7 +84,7 @@
     </div>
   </footer>
   <!-- Footer -->
-
+  <script src="../script.js"></script>
 </body>
 
 </html>
